Revert "Rebasing open source to my fork"